lintian-brush (0.137) UNRELEASED; urgency=medium

  * transitional-package-should-be-oldlibs-optional: Don't move udeb
    packages to oldlibs. Closes: #1024398

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 20 Nov 2022 11:49:07 +0000

lintian-brush (0.136) unstable; urgency=medium

  * Handle TooManyOpenFiles from inotify, and degrade gracefully.
  * Improve info format upgrade for missing-license-paragraph-in-dep5-
    copyright and missing-license-text-in-dep5-copyright.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Tue, 15 Nov 2022 20:31:19 +0000

lintian-brush (0.135) unstable; urgency=medium

  * field-name-typo-in-dep5-copyright: Don't overwrite existing fields.
  * Various formatting improvements.
  * Fix compatibility with upcoming versions of Breezy, with slightly
    modified DirtyTracker API.
  * Add deb-upstream-deps binary.
  * lintian-brush: don't ignore --exclude when there are no fixers
    specified.
  * Add detect-changelog-behaviour executable.
  * Additional verification for debian/watch changes.
  * old-override-info-format: Fix executable-is-not-world-readable
    order.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Thu, 10 Nov 2022 18:10:22 +0000

lintian-brush (0.134) unstable; urgency=medium

  * deb-scrub-obsolete: add --keep-minimum-depends-versions option.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 30 Oct 2022 18:31:05 +0000

lintian-brush (0.133) unstable; urgency=medium

  * Add fixer for missing-prerequisite-for-pyproject-backend.
  * typo-in-debhelper-override-target: Don't erroneously correct
    mh_install to dh_install. Closes: #1021899
  * old-override-info-format: Update non-standard-file-perm.
  * Support DEB_COMPAT_RELEASE environment variable.
  * threshold calculattion: Update tag names after changes in lintian.
  * Add significantly more regexes for old-override-info-format.
  * debian-rules-uses-as-needed-linker-flag: Drop related comments as
    well when removing entire line.
