@@ -1,3 +1,3 @@
 Remove empty maintainer scripts: mon (prerm)
-Certainty: likely
+Certainty: certain
 Fixed-Lintian-Tags: maintainer-script-empty
